--- a/.github/workflows/gitbook_action.yml
+++ b/.github/workflows/gitbook_action.yml
@@ -42,10 +42,11 @@ jobs:
       run: |
         cd ./_book
         git init
-        git config --local user.name "${{ secrets.GIT_NAME }}"
-        git config --local user.email "${{ secrets.GIT_EMAIL }}"
+        git config --local user.name "${{ secrets.ORG_GIT_NAME }}"
+        git config --local user.email "${{ secrets.ORG_GIT_EMAIL }}"
         git add *
         git commit -m "update"
-        git push --force  "https://${{ secrets.THE_GITHUB_TOKEN }}@${{ secrets.THE_GITHUB_REF }}" master:${{ secrets.RES_FOR_PAGES }}
+        git push --force  "https://${{ secrets.ORG_GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" master:${{ secrets.ORG_RES_FOR_PAGES }}
       env:
         CI: true
+
